--- a/_columns/The_Big_Picture/zh-cn/2024-11-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-05.md
@@ -43,7 +43,8 @@ The Dow Jones jumped above its 50-day line and reclaimed the 42,000 level. The N
 道琼斯指数跃升至 50 日线上方，收复 42,000 点。纳斯达克、标准普尔 500 指数和罗素 2000 指数回到短期移动平均线上方。
 
 
-Breadth was strong and improved as the session wore on, with advancing stocks beating decliners on the Nasdaq by nearly 3-to-1. Over on the NYSE, winners beat losers by nearly 5-to-1. The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)), one of the better gauges of breadth on the NYSE, jumped 1.2% and reclaimed its 50-day moving average after three straight closes below the line.  
+Breadth was strong and improved as the session wore on, with advancing stocks beating decliners on the Nasdaq by nearly 3-to-1. Over on the NYSE, winners beat losers by nearly 5-to-1. The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)), one of the better gauges of breadth on the NYSE, jumped 1.2% and reclaimed its 50-day moving average after three straight closes below the line.  
+随着交易日的进行，广度强劲且有所改善，上涨的股票以近 3 比 1 的优势击败纳斯达克下跌的股票。在纽约证券交易所，赢家以近 5 比 1 击败输家。Invesco S&P 500 Equal Weight ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 是纽约证券交易所衡量广度的较好指标之一，上涨 1.2% 并在连续三个收盘低于该线后收复其 50 天移动均线。
 
 
 
@@ -51,7 +52,8 @@ Breadth was strong and improved as the session wore on, with advancing stocks be
 ---
 
 
-**[See Which Stocks Are In The Leaderboard Model Portfolio](https://leaderboard.investors.com/#/)** 
+**[See Which Stocks Are In The Leaderboard Model Portfolio  
+查看排行榜模型投资组合中有哪些股票](https://leaderboard.investors.com/#/)**
 
 
 
@@ -59,23 +61,28 @@ Breadth was strong and improved as the session wore on, with advancing stocks be
 ---
 
 
-**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), which is set to join the Dow Jones industrials Friday before the open, jumped 2.8% in light turnover. After sellers knocked the stock off highs Monday, Nvidia rallied back above its 10-day moving average. Now the AI chip leader has its sights set on its recent high of 144.42. Nvidia is now the world's most valuable company — just in front of **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) — with a market capitalization just above $3.4 trillion.  
+**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), which is set to join the Dow Jones industrials Friday before the open, jumped 2.8% in light turnover. After sellers knocked the stock off highs Monday, Nvidia rallied back above its 10-day moving average. Now the AI chip leader has its sights set on its recent high of 144.42. Nvidia is now the world's most valuable company — just in front of **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) — with a market capitalization just above $3.4 trillion.  
+**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 将于周五开盘前加入道琼斯工业指数，成交量较轻，上涨 2.8%。在卖家周一将股价从高点上反弹后，英伟达反弹至其 10 天移动平均线上方。现在，这家人工智能芯片领导者将目光投向了近期的高点 144.42。英伟达现在是世界上最有价值的公司——仅次于**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL)——市值略高于 3.4 万亿美元。
 
 
-AI-related stocks generally performed well after Astera Labs reported [Q3 revenue](https://www.investors.com/news/technology/astera-labs-alab-stock-rockets-q3-report/) of $113.1 million, up 206% year over year and nicely above the $98 million consensus. Q4 revenue guidance was also above expectations. The stock blasted out of a very deep, first-stage cup-with-handle base. But keep in mind that ALAB has more than doubled after hitting a low of 36.02 in August. Rather than chase the stock, it's best to watch for a low-volume pullback at this point  
+AI-related stocks generally performed well after Astera Labs reported [Q3 revenue](https://www.investors.com/news/technology/astera-labs-alab-stock-rockets-q3-report/) of $113.1 million, up 206% year over year and nicely above the $98 million consensus. Q4 revenue guidance was also above expectations. The stock blasted out of a very deep, first-stage cup-with-handle base. But keep in mind that ALAB has more than doubled after hitting a low of 36.02 in August. Rather than chase the stock, it's best to watch for a low-volume pullback at this point  
+在 Astera Labs 报告[第三季度收入](https://www.investors.com/news/technology/astera-labs-alab-stock-rockets-q3-report/)为 1.131 亿美元后，人工智能相关股票普遍表现良好，同比增长 206%，远高于市场预期的 9800 万美元。第四季度收入指引也高于预期。该股从一个非常深的第一阶段带手柄杯子底部爆发出来。但请记住，ALAB 在 8 月份触及 36.02 的低点后已经翻了一番多。与其追逐股票，不如在此时观察低成交量的回调
 
 
-Palantir, another big player in the AI space as a provider of data analytics software, soared more than 23%. The stock market leader reported its fourth straight quarter of [accelerating revenue growth](https://www.investors.com/news/technology/palantir-stock-palantir-earnings-news-q32024/). But it's way past a proper entry after shares surged 21% in August, also on strong earnings.  
+Palantir, another big player in the AI space as a provider of data analytics software, soared more than 23%. The stock market leader reported its fourth straight quarter of [accelerating revenue growth](https://www.investors.com/news/technology/palantir-stock-palantir-earnings-news-q32024/). But it's way past a proper entry after shares surged 21% in August, also on strong earnings.  
+Palantir 是 AI 领域的另一家大公司，作为数据分析软件提供商，股价飙升超过 23%。这家股市领导者报告了其连续第四个季度[加速收入增长](https://www.investors.com/news/technology/palantir-stock-palantir-earnings-news-q32024/)。但在 8 月份股价飙升 21% 后，它远未进入一个合适的市场，这也是由于强劲的收益。
 
 
-**Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)), yet another AI stock, is trading tightly just above its 10-week moving average with earnings due Thursday after the close.  
+**Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)), yet another AI stock, is trading tightly just above its 10-week moving average with earnings due Thursday after the close.  
+另一只人工智能股票 **Arista Networks** （[ANET](https://research.investors.com/quote.aspx?symbol=ANET)） 的交易价格紧随其 10 周移动平均线上方，财报将于周四收盘后公布。
 
 
-Stocks To Watch
----------------
+Stocks To Watch 值得关注的股票
+-----------------------
 
 
-There's no doubt that a large number of growth stocks continue to act well. But there's also an ample supply of top-rated growth stocks that are extended far past proper entries. At this point, it's a good idea to put the big leaders on a watchlist and wait for alternate entries.  
+There's no doubt that a large number of growth stocks continue to act well. But there's also an ample supply of top-rated growth stocks that are extended far past proper entries. At this point, it's a good idea to put the big leaders on a watchlist and wait for alternate entries.  
+毫无疑问，大量成长型股票继续表现良好。但也有充足的顶级成长型股票供应，这些股票的有效期远远超过了适当的条目。在这一点上，将大龙头列入观察名单并等待替代条目是个好主意。
 
 
 The stock market has served up plenty of chart breakouts, including recent new issue **Reddit** ([RDDT](https://research.investors.com/quote.aspx?symbol=RDDT)), which gapped up sharply last week after reporting strong earnings. If Reddit can hold below last week's high, a short consolidation phase, or [shelf](https://www.investors.com/how-to-invest/investors-corner/what-is-a-shelf-pattern-and-why-it-is-perfect-pyramiding-tool-in-growth-stocks/), could yield a new entry.  
@@ -107,22 +114,27 @@ While several homebuilders have come under selling pressure, **Taylor Morrison H
 *在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
+[Top Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
+查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq) 
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Stocks Rally Into Election Results (Live Coverage)](https://www.investors.com/market-trend/stock-market-today/election-2024-donald-trump-kamala-harris-dow-jones-futures-bitcoin/) 
+[Stocks Rally Into Election Results (Live Coverage)  
+股市上涨至选举结果（现场报道）](https://www.investors.com/market-trend/stock-market-today/election-2024-donald-trump-kamala-harris-dow-jones-futures-bitcoin/)
 
 
 
