--- a/_columns/The_Big_Picture/zh-cn/2024-11-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-04.md
@@ -106,7 +106,7 @@ The Cboe Market Volatility Index has gained ground in three of the past four ses
 
 
 Brett Friedman, a contributor at Winhall Risk Analytics and OptionMetrics, notes that pre-election implied volatility in S&P 500 options jumped by 6.8% during an average election year from 1996 through 2023 vs. a 1.8% drop during nonelection years. The study covered trading over 10 days prior to Nov. 5.  
-Winhall Risk Analytics 和 OptionMetrics 的撰稿人 Brett Friedman 指出，在 1996 年至 2023 年的平均选举年，标准普尔 500 指数期权的选举前隐含波动率跃升了 6.8%，而非选举年则下跌了 1.8%。该研究涵盖了 11 月 5 日之前超过 10 天的交易。
+Winhall Risk Analytics 和 OptionMetrics 的撰稿人 Brett Friedman 指出，在 1996 年至 2023 年的平均选举年，标准普尔 500 指数期权的选前隐含波动率跃升了 6.8%，而非选举年则下跌了 1.8%。该研究涵盖了 11 月 5 日之前超过 10 天的交易。
 
 
 Friedman, who has built a career in financial risk management for more than three decades, has also found that since 1996, the stock market has tended to perform relatively better during non-election years from Nov. 6 through Dec. 31 than in election years. Specifically, Friedman shared this figures with IBD:  
@@ -185,10 +185,12 @@ That action triggered a [profit-taking sell rule](https://www.investors.com/how-
 如何找到获胜的成长型股票：首先搜索这些列表](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Investor's Corner: How To Use The RS Line Blue Dot Indicator](https://www.investors.com/stock-lists/ibd-50/winning-stocks-and-bullish-blue-dots/)
+[Investor's Corner: How To Use The RS Line Blue Dot Indicator  
+投资者专区：如何使用 RS Line 蓝点指标](https://www.investors.com/stock-lists/ibd-50/winning-stocks-and-bullish-blue-dots/)
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
+想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
 [The Latest In IBD Videos](https://www.investors.com/ibd-videos)
