--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-05.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-05.md
@@ -46,8 +46,8 @@ FactSet analysts expect 2024 earnings to increase 40% to $2.59 per share on 12.4
 FactSet 分析师预计 2024 年的收益将增长 40% 至每股 2.59 美元，收入增长 12.4% 至 74.4 亿美元。
 
 
-Howmet Stock Howmet 股票
-----------------------
+Howmet Stock
+------------
 
 
 
