--- a/_columns/The_Big_Picture/zh-cn/2024-11-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-05.md
@@ -20,40 +20,26 @@ Bullish earnings from **Astera Labs** ([ALAB](https://research.investors.com/quo
 
 
 
-Stocks held strong gains early even when the 10-year Treasury yield jumped to 4.366%. But the yield reversed lower and was trading around 4.28% near 4:30 p.m. ET. That helped the Russell 2000 small-cap index outperform with a gain of 1.9%. The small-cap index is back above all of its key moving averages and less than 2% from an all-time high.  
-即使 10 年期美国国债收益率跃升至 4.366%，股市早早仍保持强劲上涨。但收益率逆转走低，在美国东部时间下午 4：30 附近交易价格约为 4.28%。这帮助罗素 2000 小盘股指数以 1.9% 的涨幅跑赢大盘。小盘股指数回到其所有关键移动平均线上方，距离历史高点不到 2%。
+Stocks held strong gains early even when the 10-year Treasury yield jumped to 4.366%. But the yield reversed lower and was trading around 4.28% near 4:30 p.m. ET. That helped the Russell 2000 small-cap index outperform with a gain of 1.9%. The small-cap index is back above all of its key moving averages and less than 2% from an all-time high.  
 
 
-The surge in the 10-year yield since mid-September comes even as the Federal Reserve gets set to cut its key lending rate by another 25 basis points Thursday. That would bring the federal funds rate down to a range of 4.50%-4.75%. Futures traders tracked by [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) think there's a 76% chance that the Fed will cut by another 25 basis points at the December meeting.  
-自 9 月中旬以来，10 年期国债收益率飙升，尽管美联储周四准备将其关键贷款利率再下调 25 个基点。这将使联邦基金利率降至 4.50%-4.75% 的区间。[CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) 追踪的期货交易员认为，美联储在 12 月会议上再次降息 25 个基点的可能性为 76%。
+The surge in the 10-year yield since mid-September comes even as the Federal Reserve gets set to cut its key lending rate by another 25 basis points Thursday. That would bring the federal funds rate down to a range of 4.50%-4.75%. Futures traders tracked by [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) think there's a 76% chance that the Fed will cut by another 25 basis points at the December meeting.  
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-The S&P 500 and Dow Jones Industrial Average closed with gains of 1.2% and 1%, respectively. Volume on the NYSE rose slightly from Monday. It was a bullish session despite uncertainty about the presidential and congressional races. Polls show a tight race for control of the White House and Congress.  
-标准普尔 500 指数和道琼斯工业平均指数收盘分别上涨 1.2% 和 1%。纽约证券交易所的成交量从周一开始略有上升。尽管总统和国会竞选存在不确定性，但这是一个看涨的交易日。民意调查显示，白宫和国会的控制权竞争激烈。
+The S&P 500 and Dow Jones Industrial Average closed with gains of 1.2% and 1%, respectively. Volume on the NYSE rose slightly from Monday. It was a bullish session despite uncertainty about the presidential and congressional races. Polls show a tight race for control of the White House and Congress.  
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP110524.jpg)
 
 
-The Dow Jones jumped above its 50-day line and reclaimed the 42,000 level. The Nasdaq, S&P 500 and Russell 2000 are back above their short-term moving averages.  
-道琼斯指数跃升至 50 日线上方，收复 42,000 点。纳斯达克、标准普尔 500 指数和罗素 2000 指数回到短期移动平均线上方。
+The Dow Jones jumped above its 50-day line and reclaimed the 42,000 level. The Nasdaq, S&P 500 and Russell 2000 are back above their short-term moving averages.  
 
 
-Breadth was strong and improved as the session wore on, with advancing stocks beating decliners on the Nasdaq by nearly 3-to-1. Over on the NYSE, winners beat losers by nearly 5-to-1. The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)), one of the better gauges of breadth on the NYSE, jumped 1.2% and reclaimed its 50-day moving average after three straight closes below the line.  
-随着交易日的进行，广度强劲且有所改善，上涨的股票以近 3 比 1 的优势击败纳斯达克下跌的股票。在纽约证券交易所，赢家以近 5 比 1 击败输家。Invesco S&P 500 Equal Weight ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 是纽约证券交易所衡量广度的较好指标之一，上涨 1.2% 并在连续三个收盘低于该线后收复其 50 天移动均线。
-
-
-
-
----
-
-
-**[See Which Stocks Are In The Leaderboard Model Portfolio  
-查看排行榜模型投资组合中有哪些股票](https://leaderboard.investors.com/#/)**
+Breadth was strong and improved as the session wore on, with advancing stocks beating decliners on the Nasdaq by nearly 3-to-1. Over on the NYSE, winners beat losers by nearly 5-to-1. The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)), one of the better gauges of breadth on the NYSE, jumped 1.2% and reclaimed its 50-day moving average after three straight closes below the line.  
 
 
 
@@ -61,8 +47,15 @@ Breadth was strong and improved as the session wore on, with advancing stocks be
 ---
 
 
-**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), which is set to join the Dow Jones industrials Friday before the open, jumped 2.8% in light turnover. After sellers knocked the stock off highs Monday, Nvidia rallied back above its 10-day moving average. Now the AI chip leader has its sights set on its recent high of 144.42. Nvidia is now the world's most valuable company — just in front of **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) — with a market capitalization just above $3.4 trillion.  
-**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 将于周五开盘前加入道琼斯工业指数，成交量较轻，上涨 2.8%。在卖家周一将股价从高点上反弹后，英伟达反弹至其 10 天移动平均线上方。现在，这家人工智能芯片领导者将目光投向了近期的高点 144.42。英伟达现在是世界上最有价值的公司——仅次于**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL)——市值略高于 3.4 万亿美元。
+**[See Which Stocks Are In The Leaderboard Model Portfolio](https://leaderboard.investors.com/#/)** 
+
+
+
+
+---
+
+
+**Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), which is set to join the Dow Jones industrials Friday before the open, jumped 2.8% in light turnover. After sellers knocked the stock off highs Monday, Nvidia rallied back above its 10-day moving average. Now the AI chip leader has its sights set on its recent high of 144.42. Nvidia is now the world's most valuable company — just in front of **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) — with a market capitalization just above $3.4 trillion.  
 
 
 AI-related stocks generally performed well after Astera Labs reported [Q3 revenue](https://www.investors.com/news/technology/astera-labs-alab-stock-rockets-q3-report/) of $113.1 million, up 206% year over year and nicely above the $98 million consensus. Q4 revenue guidance was also above expectations. The stock blasted out of a very deep, first-stage cup-with-handle base. But keep in mind that ALAB has more than doubled after hitting a low of 36.02 in August. Rather than chase the stock, it's best to watch for a low-volume pullback at this point  
